<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lenta.RU</string>
    <string name="brief_news_image_desc">Картинка к новости</string>
    <string name="full_news_image_desc">Картинка к новости</string>
    <string name="title_activity_full_news">L3NTA.RU</string>
    
    <string name="pager_title_news">Новости</string>
    <string name="pager_title_videos">Видео</string>
    <string name="pager_title_photos">Фото</string>
    <string name="pager_title_articles">Статьи</string>
    <string name="pager_title_columns">Колонки</string>
    
    <string name="provider_authority">com.xeppaka.lentareader.provider</string>
    <string name="thumbnail_not_available">Изображение не доступно</string>   
    
    <string name="action_refresh">Обновить</string>
    <string name="action_refresh_run">Обновляется...</string>
    <string name="action_select_rubric">Выбрать рубрику</string>
    <string name="action_preferences">Настройки</string>
    <string name="action_copy_link">Копировать ссылку на оригинал</string>
    <string name="action_open_in_browser">Открыть в веб-обозревателе</string>

    <string name="rubric_label">Рубрика:</string>

    <string name="rubric_latest">Последние</string>
    <string name="rubric_russia">Россия</string>
    <string name="rubric_world">Мир</string>
    <string name="rubric_ussr">Бывший СССР</string>
    <string name="rubric_economics">Экономика</string>
    <string name="rubric_science">Наука и техника</string>
    <string name="rubric_sport">Спорт</string>
    <string name="rubric_culture">Культура</string>
    <string name="rubric_internet">Интернет и СМИ</string>
    <string name="rubric_life">Из жизни</string>

    <string name="pref_about_application">О программе</string>

    <string name="pref_load_images">Изображения</string>
    <string name="pref_load_images_news_list">В ленте новостей</string>
    <string name="pref_load_images_news_full">В полной новости</string>
    <string name="pref_load_images_news_list_summary">Загружать изображения при пролистывании ленты новостей</string>
    <string name="pref_load_images_news_full_summary">Загружать изображения при открытии полной новости</string>

    <string name="pref_old_news">Новости и статьи</string>
    <string name="pref_news_deletion_summary">Автоматически удалять новости из кэша</string>
    <string name="pref_news_deletion_interval_summary_day">Автоматическое удаление новостей из кэша после %1s дня</string>
    <string name="pref_news_deletion_interval_summary_days">Автоматическое удаление новостей из кэша после %1s дней</string>
    <string name="pref_news_deletion_interval_summary_days_default">Автоматическое удаление новостей из кэша после 5 дней</string>

    <string name="pref_article_deletion_summary">Автоматически удалять статьи из кэша</string>
    <string name="pref_article_deletion_interval_summary_day">Автоматическое удаление статей из кэша после %1s дня</string>
    <string name="pref_article_deletion_interval_summary_days">Автоматическое удаление статей из кэша после %1s дней</string>
    <string name="pref_article_deletion_interval_summary_days_default">Автоматическое удаление статей из кэша после 20 дней</string>

    <string name="article_delete_interval_header">Количество дней, после которых статья будет автоматически удалена из кэша:</string>
    <string name="news_delete_interval_header">Количество дней, после которых новость будет автоматически удалена из кэша:</string>

    <string name="news_text_size_dialog_title">Выберите размер текста:</string>
    <string name="news_text_size_example">Земля — третья от Солнца планета. Пятая по размеру среди всех планет Солнечной системы.</string>
    <string name="news_list_text_size_summary_default">Размер текста в списке новостей — 14</string>
    <string name="news_full_text_size_summary_default">Размер текста в открытой новости — 16</string>
    <string name="news_list_text_size_summary">Размер текста в списке новостей — %1d</string>
    <string name="news_full_text_size_summary">Размер текста в открытой новости — %1d</string>
    <string name="news_auto_refresh_summary">Автоматически загружать свежие новости, при открытии приложения и смене рубрики</string>

    <string name="news_clear_cache_confirmation">Вы уверены?</string>
    <string name="rate_program_summary">Оценить программу в магазине приложений</string>

    <string name="clear_cache_result" formatted="false">Удалено новостей из кэша: %d\nУдалено статей из кэша: %d</string>
    <string name="cache_clear_summary">Очистить кэш (удалить все новости и статьи сохраненные в телефоне)</string>

    <string name="error_no_internet_connection_toast">Ошибка соединения с сервером.\nПроверьте ваше соединение с интернетом.</string>
    <string name="error_general_toast">Ошибка соединения с сервером.</string>
    <string name="error_open_link_toast">Невозможно перейти по ссылке. Адрес ссылки некорректен.</string>
    <string name="error_news_link_copied_toast">Произошла ошибка при копировании ссылки на новость.</string>
    <string name="error_article_link_copied_toast">Произошла ошибка при копировании ссылки на новость.</string>
    <string name="error_link_open_in_browser_toast">Произошла ошибка при открытии ссылки.</string>
    <string name="info_news_link_copied_toast">Ссылка на новость была скопирована в буфер обмена.</string>
    <string name="info_article_link_copied_toast">Ссылка на статью была скопирована в буфер обмена.</string>

    <string name="comment_deleted">Комментарий удален</string>
    <string name="comment_parent_text">ответ на комментарий от %s</string>
    <string name="comment_answers">ответов:</string>
    <string name="comment_no_comments">К этой новости нет комментариев :(</string>
    <string name="comment_error_loading_list_message">Ошибка соединения с сервером.\nПроверьте ваше соединение с интернетом и попробуйте обновить.</string>
    <string name="comment_error_loading">Ошибка соединения с сервером.\nПроверьте ваше соединение с интернетом.</string>
    <string name="comment_now_read">Сейчас читают:</string>
    <string name="comment_now_read_count_default">_</string>

    <string name="pref_background_update_title">Фоновые уведомления</string>
    <string name="pref_background_update_check">Фоновая загрузка новостей</string>
    <string name="pref_news_background_check_interval_summary">Загружать новости в фоне каждые %s минут</string>
    <string name="pref_news_background_check_interval_summary_default">Загружать новости в фоне каждые 20 минут</string>
    <string name="news_background_check_interval_header">Временной интервал между фоновыми загрузками новостей:</string>
    <string name="news_new_items_auto_refresh">Загружено новых новостей в фоне: %d</string>
    <string name="articles_new_items_auto_refresh">Загружено новых статей в фоне: %d</string>
</resources>
