<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_preferences"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_preferences"
        yourapp:showAsAction="always" />
    <item android:id="@+id/action_select_rubric"
        android:icon="@drawable/ic_action_view_as_list"
        android:title="@string/action_select_rubric"
        yourapp:showAsAction="always" />
    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        yourapp:showAsAction="always" />
    <item android:id="@+id/action_refresh_run"
        android:title="@string/action_refresh_run"
        android:visible="false"
        yourapp:showAsAction="always" />
</menu>