<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/select_rubric_menu"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dip"
        android:layout_marginLeft="70dip"
        android:visibility="invisible">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button_rubric_all"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rubric_root"
                android:background="@drawable/button_select_rubric"
                android:onClick="onRubricSelected"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <Button
                android:id="@+id/button_rubric_russia"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rubric_russia"
                android:onClick="onRubricSelected"/>
            <Button
                android:id="@+id/button_rubric_world"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/rubric_world"
                android:layout_weight="1"
                android:onClick="onRubricSelected"/>
            <Button
                android:id="@+id/button_rubric_ussr"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/rubric_ussr"
                android:layout_weight="1"
                android:onClick="onRubricSelected"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <Button
                android:id="@+id/button_rubric_economics"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rubric_economics"
                android:onClick="onRubricSelected"/>
            <Button
                android:id="@+id/button_rubric_science"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rubric_science"
                android:onClick="onRubricSelected"/>
            <Button
                android:id="@+id/button_rubric_sport"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rubric_sport"
                android:onClick="onRubricSelected"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <Button
                android:id="@+id/button_rubric_culture"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rubric_culture"
                android:onClick="onRubricSelected"/>
            <Button
                android:id="@+id/button_rubric_internet"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rubric_internet"
                android:onClick="onRubricSelected"/>
            <Button
                android:id="@+id/button_rubric_life"
                style="@style/SelectRubricButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rubric_life"
                android:onClick="onRubricSelected"/>
        </LinearLayout>
    </LinearLayout>
</merge>